--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,22 @@
 .App-link {
   color: #61dafb;
 }
+
+#Animations
+.fade-enter{
+  opacity:0.01;
+}
+.fade-enter{
+  opacity:0.01;
+}
+.fade-enter.fade-enter-active{
+  opacity:1;
+  transition: opacity 350ms ease-in;
+}
+.fade-exit{
+  opacity:1;
+}
+.fade-exit.fade-exit-active{
+  opacity:0.01;
+  transition: opacity 350ms ease-in;
+}
