--- a/src/Cards.css
+++ b/src/Cards.css
@@ -1,11 +1,9 @@
 .Card-body{
-    padding: 2rem 2rem;
     background-color: white;
     border-radius: 10px;
     height: 100%;
     max-height: 500px;
     box-shadow: 0px 15px 20px rgba(150, 50, 85, 0.1);
-    margin-bottom: 100px;
     transition: transform .3s ease-out;
 }
 
@@ -16,8 +14,8 @@
 }
 
 .Card-img{
-    width: 185px;
-    padding: 1rem;
+    width: 100%;
+    border-radius: 10px;
 }
 
   .Card-body:hover {
