--- a/src/Tradition.css
+++ b/src/Tradition.css
@@ -1,7 +1,8 @@
 .Tradition-overlay{
     background-color: rgba(255, 255, 255, 0.85);
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    padding: 2rem 1rem 3rem 1rem;
 }
 
 .Tradition-icon{
@@ -22,11 +23,12 @@
     font-weight: 600;
     color: #9e2d52;
     font-size: 1rem;
+    margin: 2rem 0rem 3rem 0rem;
 }
 
 .Tradition-button{
     border-radius: 100rem;
-    margin: 3rem 1rem;
+    margin: 1rem 1rem;
     border: 3px solid #1e1cb9;
     background-color: #1e1cb9;
     font-size: 1.2rem;
@@ -37,7 +39,7 @@
 
 .Tradition-repeat-button{
     border-radius: 100rem;
-    margin: 3rem 1rem;
+    margin: 1rem 1rem;
     border: 3px solid #9e2d52;
     background-color: transparent;
     font-size: 1.2rem;
