Added mobile CSS queries

--- a/src/App.css
+++ b/src/App.css
@@ -102,27 +102,40 @@
   padding: 10px;
 }
 
+/******** MOBILE ********/
 
-
-
-
-#Animations
-.fade-enter{
-  opacity:0.01;
+@media only screen and (max-height: 560px) {
+  .App-text{
+      margin-bottom: 10px;
+  }
 }
+
+@media only screen and (max-width: 768px) {
+  .App-title{
+    font-size: 2.1rem;
+  }
+  .App-text{
+    font-size: 1.15rem !important;
+    font-weight: 500;
+    margin-bottom: 2.5rem;
+  }
+}
+
+
+/******** ANIMATIONS ********/
 .fade-enter{
   opacity:0.01;
 }
 .fade-enter.fade-enter-active{
   opacity:1;
-  transition: opacity 350ms ease-in;
+  transition: opacity 450ms ease-in;
 }
 .fade-exit{
   opacity:1;
 }
 .fade-exit.fade-exit-active{
   opacity:0.01;
-  transition: opacity 350ms ease-in;
+  transition: opacity 450ms ease-in;
 }
 
 
