--- a/src/Tradition.css
+++ b/src/Tradition.css
@@ -5,23 +5,23 @@
     padding: 2rem 1rem 3rem 1rem;
 }
 
-.Tradition-icon{
-    height: 50px;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-}
-
 .Tradition-quote{
     font-weight: bold;
     font-size: 2rem;
     line-height: 3.5rem;
     margin-bottom: 2rem;
-    color: #B44367;
+    color: #C71C4F;
+}
+
+.Tradition-icon{
+    height: 30px;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
 }
 
 .Tradition-source{
     font-weight: 600;
-    color: #9e2d52;
+    color: #C71C4F;
     font-size: 1rem;
     margin: 2rem 0rem 3rem 0rem;
 }
@@ -40,10 +40,38 @@
 .Tradition-repeat-button{
     border-radius: 100rem;
     margin: 1rem 1rem;
-    border: 3px solid #9e2d52;
+    border: 3px solid #C71C4F;
     background-color: transparent;
     font-size: 1.2rem;
     padding: 1rem 2rem;
     font-weight: 600;
-    color: #9e2d52;
+    color: #C71C4F;
+}
+
+@media only screen and (max-width: 768px) {
+    .Tradition-overlay{
+        min-height: 100vh;
+        padding: 2rem 0.8rem 3rem 0.8rem;
+    }
+    .Tradition-quote{
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+    }
+    .Tradition-icon{
+        height: 18px;
+    }
+    .Tradition-source{
+        font-size: 0.9rem;
+        line-height: 1.5rem;
+        margin: 2rem 0rem 2rem 0rem;
+    }
+    .Tradition-button{
+        font-size: 1rem;
+        padding: 0.8rem 1.6rem;
+    }
+    
+    .Tradition-repeat-button{
+        font-size: 1rem;
+        padding: 0.8rem 1.6rem;
+    }
 }
