Added raw model

--- a/src/Home.css
+++ b/src/Home.css
@@ -17,6 +17,10 @@
             animation: modalFadeOut 0.5s;
 }
 
+.Home-modal{
+    min-width: 70vw !important;
+}
+
 /******** MOBILE ********/
 
 @media only screen and (max-width: 768px) {
